--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <li><a href="3.html">Javascript</a></li>
 </ol>
 <h2>WEB</h2>
-<p>This award represents the culmination of a quarter-century of work at W3C. Web Fonts enable people to use fonts on demand over the web without requiring installation in the operating system. W3C has experience in downloadable fonts through HTML, CSS2, and SVG. Downloadable fonts were not common on the web due to the lack of an interoperable font format. The Web Fonts effort addresses that through the creation of an industry-supported, open font format for the web called “WOFF” (Web Open Font Format) whose version 2, which became a standard in 2018, is deployed in all major web browsers and powers a vast majority of sites.
+<p>hi hello!
 </p>
 </body>
 </html>
